tests/fixtures/valid/layout_stage4/if_expression_assignment.pine
//@version=6
indicator("If expression assignment")
value = if close > open
    close
else
    open
