tests/fixtures/invalid/semantic/if_non_bool_condition.pine
//@version=6
indicator("x")
if close
    x = 1
